Blender (Linux) does not use its icon anymore in GNOME 43, since Wayland went public #101805

Closed
opened 2022-10-13 19:01:11 +02:00 by Anton Raves · 10 comments

System Information
Operating system: Linux-5.19.14-300.fc37.x86_64-x86_64-with-glibc2.36 64 Bits
Graphics card: Mesa Intel(R) Iris(R) Pro Graphics 6200 (BDW GT3) Intel 4.6 (Core Profile) Mesa 22.2.0

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-13 10:26, hash: cbe1c1474b
Blender 3.4.0 Alpha non Wayland

Short description of error
Whenever Blender 3.4.0 Alpha Wayland is launched it does not use its icon in the GNOME Dash anymore, it adds a new temporary generic one, in the accompanying screendump that is the one with the two gears.

Exact steps for others to reproduce the error
Download a buildbot edition of Blender 3.4.0 Alpha with Wayland support, install it, in my case at /opt/blender with the appropriately edited blender.desktop and launch it, be it from the Dash or using the terminal, that does not matter.

Screenshot from 2022-10-13 18-46-07.png

**System Information** Operating system: Linux-5.19.14-300.fc37.x86_64-x86_64-with-glibc2.36 64 Bits Graphics card: Mesa Intel(R) Iris(R) Pro Graphics 6200 (BDW GT3) Intel 4.6 (Core Profile) Mesa 22.2.0 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-13 10:26, hash: `cbe1c1474b` Blender 3.4.0 Alpha non Wayland **Short description of error** Whenever Blender 3.4.0 Alpha Wayland is launched it does not use its icon in the GNOME Dash anymore, it adds a new temporary generic one, in the accompanying screendump that is the one with the two gears. **Exact steps for others to reproduce the error** Download a buildbot edition of Blender 3.4.0 Alpha with Wayland support, install it, in my case at /opt/blender with the appropriately edited blender.desktop and launch it, be it from the Dash or using the terminal, that does not matter. ![Screenshot from 2022-10-13 18-46-07.png](https://archive.blender.org/developer/F13674024/Screenshot_from_2022-10-13_18-46-07.png)
Author

Added subscriber: @Memento

Added subscriber: @Memento
Campbell Barton was assigned by Anton Raves 2022-10-13 19:01:34 +02:00

Added subscriber: @rjg

Added subscriber: @rjg

This might be a duplicate of #101779. Please check if the next daily build works as expected.

This might be a duplicate of #101779. Please check if the next daily build works as expected.
Author

The daily build cbe1c1474b I downloaded was an extra poked build from several hours after the commit mentioned in #101779, but I will try again tomorrow morning!

The daily build cbe1c1474b I downloaded was an extra poked build from several hours after the commit mentioned in #101779, but I will try again tomorrow morning!
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author

Even with build 1fbd300adb of today, the anomaly still remains, an extra generic icon instead of the (also present) official Blender icon in the Dash. Even tried with deleting all settings from ~/.config/blender

Even with build 1fbd300adb of today, the anomaly still remains, an extra generic icon instead of the (also present) official Blender icon in the Dash. Even tried with deleting all settings from ~/.config/blender
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

This issue was referenced by 695614ad3b

This issue was referenced by 695614ad3b7afb95b9918081d9e2c8e1ddd87f5e

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101805
No description provided.