Fix T101805: Blender icons doesn't show in GNOME 43

Use an app_id that matches the naming for the `.desktop`
file distributed with Blender.

Follow up to T101779.